
2024-03-30:	refactored a pissload of code so that all the main reading/writing heatmap data stuff is inside HeatmapNew and HeatmapImage (and not WorldHeatmapPlugin) so that they can be tested /debugged/profiled with some standalone test program rather than only being able to be run in runelite.

** UPDATE RELEASED **

2024-04-01:	Updated map to include Varlamore

2024-04-03:	NOTE: I wonder if it's possible to just use runelite's MapImageDumper directly from the plugin instead of using my HeatmapImage class, so that the world map is always up to date? Perhaps I can override its methods or something to add the heatmap visualization.
	result: Just remembered that MapImageDumper uses a somewhat broken version of BigBufferedImage which creates big ass temp files that never get deleted, so it shouldn't be used in a plugin.

2024-04-03:	Changed default speed-memory tradeoff from 4 to 6

2024-12-07: Changed default heatmap alpha from 0.65 to 1.0

2024-12-07: Added int field to HeatmapNew: AccountType

2024-12-07: Added int field to HeatmapNew: CurrentCombatLevel

2024-12-07: Changed image output filenames for better sorting (now the name comes before the date)

2024-12-09: Made it periodically upload files to https://www.osrsworldheatmap.com/api/upload-csv/

2024-12-10: Added opt in/out checkbox for uploading anonymous data to contribute to the global heatmap

2024-12-10: Changed PLACES_SPOKEN_AT to include other people talking instead of just the user, because one user usually doesn't talk too much. It would be more interesting to see a heatmap of where people talk in general.

2024-12-10: Fixed some buttons not fitting their text

** UPDATE RELEASED **

----You are Here----

TODO: See if there's any reason why that guy's heatmaps were resetting
    NOTE: Maybe I should see if there's anything interesting about the time since his last save file when it reset